<resources>
    <string name="app_name">iTour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_best_tour_app">Your best tour app</string>
    <string name="_15_jun_17_jul">15 Jun - 17 Jul</string>
    <string name="_34c_sunny">34C Sunny</string>
    <string name="_9am_tue">9am - Tue</string>
    <string name="lorem_ipsum_short">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</string>
    <string name="more_details">More Details</string>
    <string name="travel_details">Travel Details</string>
    <string name="more"><![CDATA[more>>]]></string>
    <string name="about">About</string>
    <string name="lorem_ipsum_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="audio_note">Audio Note</string>
    <string name="press_play">Press Play to listen Audio</string>
    <string name="people_s_reviews">People\'s Reviews</string>
    <string name="micheal_drift">Micheal Drift</string>
    <string name="lorem_ipsum_medium">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
    <string name="sarah_conor">Sarah Conor</string>
    <string name="place_details">Place Details</string>
    <string name="museum_details">Museum Details</string>
    <string name="people_s_story">People\'s Story</string>
    <string name="get_started">Get Started</string>
    <string name="places">Places</string>
    <string name="country">Country</string>
    <string name="imageview">ImageView</string>
    <string name="title">Title</string>
    <string name="musuem_paria">Musuem Paria</string>
    <string name="novem_renova">Novem Renova</string>
    <string name="spacia_andie">Spacia Andie</string>
    <string name="musuem_nigeria">Musuem Nigeria</string>
    <string name="lvalie_musuem">Lvalie Musuem</string>
    <string name="madidum_view">Madidum View</string>
    <string name="speria_musuem">Speria Musuem</string>
    <string name="matili_adnum">Matili Adnum</string>
    <string name="mafielo_spanum">Mafielo Spanum</string>
    <string name="zentonum_view">Zentonum View</string>
    <string name="beauty_place">Beauty Place</string>
    <string name="place_lovely">Place Lovely</string>
    <string name="pretty_place">Pretty Place</string>
    <string name="amazing_place">Amazing Place</string>
    <string name="gorgeous_place">Gorgeous Place</string>
    <string name="awesome_place">Awesome Place</string>
    <string name="garden_view">Garden View</string>
    <string name="true_beauty">True Beauty</string>
    <string name="blossom_view">Blossom View</string>
    <string name="love_garden">Love Garden</string>
    <string name="travel_there">Travel There</string>
    <string name="travel_outside">Travel OutSide</string>
    <string name="travel_in_there">Travel InThere</string>
    <string name="travel_vacation">Travel Vacation</string>
    <string name="travel_nigeria">Travel Nigeria</string>
    <string name="lorem_very_short">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</string>
    <string name="istanbul">IStanbul</string>
    <string name="turkey">Turkey</string>
    <string name="rome">Rome</string>
    <string name="italy">Italy</string>
    <string name="new_york">New York</string>
    <string name="usa">USA</string>
    <string name="abuja">Abuja</string>
    <string name="nigeria">Nigeria</string>
    <string name="travel">Travel</string>
    <string name="museum">Museum</string>
    <string name="place">Place</string>
    <string name="stadium">Stadium</string>
</resources>
