<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopPlacesOpenActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/top_places_id"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginBottom="@dimen/eight">

        <ImageView
            android:id="@+id/top_place_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/travel"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/place_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginLeft="@dimen/eight"
            android:layout_marginRight="@dimen/eight"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginTop="@dimen/sixteen"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_place_image" />

        <TextView
            android:id="@+id/country_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginLeft="@dimen/eight"
            android:layout_marginRight="@dimen/eight"
            android:layout_marginStart="@dimen/eight"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginLeft="@dimen/eight"
            android:layout_marginRight="@dimen/eight"
            android:layout_marginStart="@dimen/eight"
            android:text="@string/_15_jun_17_jul"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sixteen"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginLeft="@dimen/eight"
            android:layout_marginRight="@dimen/eight"
            android:layout_marginStart="@dimen/eight"
            android:text="@string/_34c_sunny"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginLeft="@dimen/eight"
            android:layout_marginRight="@dimen/eight"
            android:layout_marginStart="@dimen/eight"
            android:text="@string/_9am_tue"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.966"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <include
            layout="@layout/toolbar_layout"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_places_id"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sixteen"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/sixteen"
                android:text="@string/about"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/sixteen"
                android:layout_marginLeft="@dimen/sixteen"
                android:layout_marginRight="@dimen/sixteen"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/lorem_ipsum_long"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sixteen"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="24dp"
                android:text="@string/audio_note"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Button
                android:id="@+id/play_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="@dimen/sixteen"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/eight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                android:background="@drawable/ic_play_arrow" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sixteen"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/press_play"
                app:layout_constraintStart_toEndOf="@+id/play_button"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sixteen"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/sixteen"
                android:text="@string/people_s_reviews"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/play_button" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sixteen"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/sixteen"
                android:text="@string/micheal_drift"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/eight"
                android:layout_marginLeft="@dimen/sixteen"
                android:layout_marginRight="@dimen/eight"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/lorem_ipsum_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sixteen"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/sixteen"
                android:text="@string/sarah_conor"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sixteen"
                android:layout_marginEnd="@dimen/eight"
                android:layout_marginLeft="@dimen/sixteen"
                android:layout_marginRight="@dimen/eight"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/lorem_ipsum_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>