<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/top_places_id"
    android:layout_marginBottom="@dimen/eight"
    android:layout_height="170dp">

    <ImageView
        android:id="@+id/top_place_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/travel"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/place_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/sixteen"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_place_image" />

    <TextView
        android:id="@+id/country_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:layout_marginStart="@dimen/eight"
        android:text=""
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:layout_marginStart="@dimen/eight"
        android:text="@string/_15_jun_17_jul"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sixteen"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:layout_marginStart="@dimen/eight"
        android:text="@string/_34c_sunny"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:layout_marginStart="@dimen/eight"
        android:text="@string/_9am_tue"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toEndOf="@+id/textView4" />
</android.support.constraint.ConstraintLayout>