<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContainerOpenActivity">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/top_places_id"
        android:layout_marginBottom="@dimen/eight"
        android:layout_height="170dp">

        <ImageView
            android:id="@+id/top_place_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/travel"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/place_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginLeft="@dimen/eight"
            android:layout_marginRight="@dimen/eight"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginTop="@dimen/sixteen"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/top_place_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_place_image" />

        <include
            layout="@layout/toolbar_layout"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/eight"
        android:layout_marginBottom="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_places_id">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginStart="@dimen/sixteen"
                    android:layout_marginTop="@dimen/sixteen"
                    android:text="@string/about"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/sixteen"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginRight="@dimen/sixteen"
                    android:layout_marginStart="@dimen/sixteen"
                    android:layout_marginTop="@dimen/eight"
                    android:textSize="15sp"
                    android:text="@string/lorem_ipsum_long"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginStart="@dimen/sixteen"
                    android:layout_marginTop="24dp"
                    android:text="@string/audio_note"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <Button
                    android:id="@+id/play_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginStart="@dimen/sixteen"
                    android:layout_marginTop="@dimen/sixteen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    android:background="@drawable/ic_play_arrow" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginStart="@dimen/sixteen"
                    android:layout_marginTop="@dimen/sixteen"
                    android:text="@string/press_play"
                    app:layout_constraintStart_toEndOf="@+id/play_button"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginStart="@dimen/sixteen"
                    android:layout_marginTop="24dp"
                    android:text="@string/people_s_story"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/play_button" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/comment_recyclerview_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/sixteen"
                    android:layout_marginEnd="@dimen/sixteen"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginRight="@dimen/sixteen"
                    android:layout_marginStart="@dimen/sixteen"
                    android:layout_marginTop="@dimen/sixteen"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>